# pancake-rs

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: lzhqf5y9dcgfkg5f7f96jjc814pgrsqy-source  pkfpg2zhmb6yc6b2x6h4jqgwccjkmfrr-source  wa0r3m6bz8avaq4mw5f6mzxyiq3vy9z9-source  zw7c1kvkyjhgmp98g70bbgda6xgyilam-source
src/: ast.rs  codegen.rs  grammer.pest  main.rs  pancake.lalrpop  typecheck.rs
