[package]
name = "pancake-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm17-0", "llvm17-0-prefer-static"] }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
nom = "7.1.3"
